# Blog-Writing-Agent

./: .dockerignore  .env.example  .gitignore  .project-root  Dockerfile  README.md  State of Multimodal LLMs in 2026.md  deployment-setup-notes.txt  docker-compose.yml  main.py  metadata.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yaml
Application/: app.py  index.html
notebooks/: agent.ipynb  image_placeHolder.ipynb  understanding_self_attention.md  understanding_self_attention_in_deep_learning.md
results/: Attention is All You Need Paper Explained.md  State of Multimodal LLMs in 2026.md
src/components/: image_generation.py  taivily_search.py
src/constants/: __init__.py
src/exception/: __init__.py
src/graph/: Compile_graph.py
src/graph/graphs/: reducer_subgraph.py
src/graph/nodes/: fanout_node.py  orchaster_node.py  reducer_node.py  reducer_sub_node.py  router_node.py  search_node.py  worker_node.py
src/llm/: __init__.py
src/logger/: __init__.py
src/models/: Evidence_model.py  ImageSpec_model.py  Plan_model.py  RouterDecision_model.py  State_model.py  Task_models.py
src/prompts/: __init__.py
src/tests/: test_blogging_agent.py  test_operation.py
src/utils/: asyncHandler.py  blog_utils.py
