[project]
name = "bloggig-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.64.0",
    "huggingface-hub>=1.4.1",
    "langchain>=1.2.10",
    "langchain-aws>=1.2.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
]
